--- a/html/index.html
+++ b/html/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HAZ</title>
+    <title>HAZ - Accueil</title>
     <link rel="stylesheet" href="../css/style.css">
-    <script src="../js/script.js" defer></script>
 </head>
+
 <body>
     <header>
         <div class="top-page">
@@ -27,5 +28,7 @@
     <footer>
         <p>© 2025 HAZ. Tous droits réservés.</p>
     </footer>
+    <script src="../js/script.js" defer></script>
 </body>
+
 </html>
