update and add linkedin and map of site

--- a/html/contact.html
+++ b/html/contact.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="top-page">
-            <img src="../img/Logo HAZ.png" alt="Logo">
+            <img src="../img/Logo HAZ.png" alt="Logo du site">
             <nav class="navMenu">
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="projets.html">Projets</a></li>
@@ -22,7 +22,8 @@
     <main>
         <section>
             <h2>Contact</h2>
-            <p>Pour me contacter, remplissez le formulaire</p>
+            <p>Vous pouvez me contactez via <a href="https://www.linkedin.com/in/cl%C3%A9ment-hazera-659057129/">Mon Profil LinkedIn <img class="logos" src="../img/LinkedIn_logo_initials.webp" alt="Logo du LinkedIn">
+            </a><br><br>ou<br><br>En remplissant le formulaire suivant:</p>
             <form>
                 <label for="name">Nom :</label><br>
                 <input type="text" id="name" name="name" required><br><br>
@@ -38,7 +39,7 @@
         </section>
     </main>
     <footer>
-        <p>© 2025 HAZ. Tous droits réservés.</p>
+        <p><a href="plan_du_site.html">Plan du site</a> - Tous droits réservés © 2025 HAZ</p>
     </footer>
     <script src="../js/script.js" defer></script>
 </body>
