--- a/html/projets.html
+++ b/html/projets.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="top-page">
-            <img src="../img/Logo HAZ.png" alt="Logo">
+            <img src="../img/Logo HAZ.png" alt="Logo du site">
             <nav class="navMenu">
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="projets.html">Projets</a></li>
@@ -26,7 +26,7 @@
         </section>
     </main>
     <footer>
-        <p>© 2025 HAZ. Tous droits réservés.</p>
+        <p><a href="plan_du_site.html">Plan du site</a> - Tous droits réservés © 2025 HAZ</p>
     </footer>
     <script src="../js/script.js" defer></script>
 </body>
