--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="top-page">
-            <img src="../img/Logo HAZ.png" alt="Logo">
+            <img src="../img/Logo HAZ.png" alt="Logo du site">
             <nav class="navMenu">
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="projets.html">Projets</a></li>
@@ -22,11 +22,24 @@
     <main>
         <section>
             <h2>Bienvenue !</h2>
-            <p>Salut moi c'est Clément, je suis Développeur en formation</p>
+            <p>Je m'appelle <strong>Clément HAZERA</strong>. Actuellement en reconversion pour devenir
+                <strong><em>Développeur Full Stack</em></strong>, je suis à la recherche d'une alternance en contrat de
+                professionnalisation.</p>
+            <p>Venant du domaine des Economies d'Energies dans le Bâtiment, je souhaiterais acquérir les compétences qui
+                me permettront de créer les outils utiles à la transition écologique et numérique.</p>
+        </section>
+        <section>
+            <h3>Les différents languages que je suis en train d'apprendre:</h3>
+            <ul>
+                <li>HTML / CSS</li>
+                <li>Javascript</li>
+                <li>C</li>
+                <li>Python</li>
+            </ul>
         </section>
     </main>
     <footer>
-        <p>© 2025 HAZ. Tous droits réservés.</p>
+        <p><a href="plan_du_site.html">Plan du site</a> - Tous droits réservés © 2025 HAZ</p>
     </footer>
     <script src="../js/script.js" defer></script>
 </body>
