change font and style, add list of ADA project

--- a/html/index.html
+++ b/html/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HAZ - Accueil</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/font.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap">
 </head>
 
 <body>
@@ -24,7 +28,8 @@
             <h2>Bienvenue !</h2>
             <p>Je m'appelle <strong>Clément HAZERA</strong>. Actuellement en reconversion pour devenir
                 <strong><em>Développeur Full Stack</em></strong>, je suis à la recherche d'une alternance en contrat de
-                professionnalisation.</p>
+                professionnalisation.
+            </p>
             <p>Venant du domaine des Economies d'Energies dans le Bâtiment, je souhaiterais acquérir les compétences qui
                 me permettront de créer les outils utiles à la transition écologique et numérique.</p>
         </section>
@@ -34,7 +39,8 @@
                 <li>HTML / CSS</li>
                 <li>Javascript</li>
                 <li>C</li>
-                <li>Python</li>
+                <li>PHP</li>
+                <li>SQL</li>
             </ul>
         </section>
     </main>
