--- a/html/contact.html
+++ b/html/contact.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HAZ - Contact</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/font.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap">
 </head>
 
 <body>
@@ -24,17 +28,18 @@
             <h2>Contact</h2>
             <p>Vous pouvez me contactez via <a href="https://www.linkedin.com/in/cl%C3%A9ment-hazera-659057129/">Mon Profil LinkedIn <img class="logos" src="../img/LinkedIn_logo_initials.webp" alt="Logo du LinkedIn">
             </a><br><br>ou<br><br>En remplissant le formulaire suivant:</p>
-            <form>
-                <label for="name">Nom :</label><br>
-                <input type="text" id="name" name="name" required><br><br>
+            <form class="form-container">
+                <label for="name">Nom :</label>
+                <input type="text" id="name" name="name" required>
 
-                <label for="email">Email :</label><br>
-                <input type="email" id="email" name="email" required><br><br>
+                <label for="email">Email :</label>
+                <input type="email" id="email" name="email" required>
 
-                <label for="message">Message :</label><br>
-                <textarea id="message" name="message" rows="8" required></textarea><br><br>
+                <label for="message">Message :</label>
+                <textarea id="message" name="message" required></textarea>
 
-                <button type="submit">Envoyer</button>
+                <button type="submit" class="submit-btn">Envoyer</button>
+                <!-- besoin d'un serveur SMTP pour envoyer des mails -->
             </form>
         </section>
     </main>
