--- a/html/projets.html
+++ b/html/projets.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HAZ - Projets</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/font.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap">
 </head>
 
 <body>
@@ -22,7 +26,67 @@
     <main>
         <section>
             <h2>Projets</h2>
-            <p>Retrouver mes projets ici</p>
+            <ul class="projectsList">
+                <li>
+                    <h3>Jeu Dice Dice Baby</h3>
+                    <p>Animation du jeu de société Piña Coladice.</p>
+                    <p>Lien vers <a href="../../appli_pina_coladice/html/index.html">Dice Dice Baby</a></p>
+                </li>
+                <hr>
+                <li>
+                    <h3>Site de Brassage de Bière artisannale</h3>
+                    <p>Site internet sur tout ce qu'il faut savoir pour créer sa propre bière maison, avec un répertoire de recette de bière.</p>
+                    <p>Lien vers <a href="../../site_brassage/html/index.html">Brassage de Bière</a></p>
+                </li>
+                <hr>
+                <li>
+                    <h3>Quiz</h3>
+                    <p>Projet éducatif. Ce projet a pour objectif de développer une application de quiz interactive en utilisant des technologies front-end telles que HTML, CSS et JavaScript.</p>
+                    <p>Lien vers <a href="">Quiz</a></p>
+                </li>
+                <hr>
+                <li>
+                    <h3>Dataviz & API</h3>
+                    <p>Projet éducatif. Ce projet a pour objectif de développer une application web qui permette de visualiser des données de façon dynamique</p>
+                    <p>Lien vers <a href="">Projet</a></p>
+                </li>
+                <hr>
+                <li>
+                    <h3>Extension de navigateur</h3>
+                    <p>Projet éducatif. Ce projet a pour objectif le développement d'une extension pour navigateur.</p>
+                    <p>Lien vers <a href="">Extension</a></p>
+                </li>
+                <hr>
+                <li>
+                    <h3>Réseau social PHP</h3>
+                    <p>Projet éducatif. Ce projet a pour objectif le développement d'un réseau social en PHP.</p>
+                    <p>Lien vers <a href="">Réseau Social</a></p>
+                </li>
+                <hr>
+                <li>
+                    <h3>Plateforme de vente de meubles</h3>
+                    <p>Projet éducatif. Ce projet a pour objectif la création d'une plateforme de vente de meuble.</p>
+                    <p>Lien vers <a href="">Plateforme de vente</a></p>
+                </li>
+                <hr>
+                <li>
+                    <h3>Plateforme microblogging</h3>
+                    <p>Projet éducatif. Ce projet a pour objectif la création d'une plateforme de microblogging.Vous allez créer une application Android qui référence les meilleurs spots de surf du monde</p>
+                    <p>Lien vers <a href="">Plateforme microblogging</a></p>
+                </li>
+                <hr>
+                <li>
+                    <h3>Application Mobile Front</h3>
+                    <p>Projet éducatif. Ce projet a pour objectif la création d'une application iPhone qui référence les meilleurs spots de surf du monde.</p>
+                    <p>Lien vers <a href="">Application Mobile Front</a></p>
+                </li>
+                <hr>
+                <li>
+                    <h3>Application Mobile Back</h3>
+                    <p>Projet éducatif. Ce projet a pour objectif la création d'une API REST en GO afin de dynamiser votre application iPhone qui référence les meilleurs spots de surf du monde.</p>
+                    <p>Lien vers <a href="">Application Mobile Back</a></p>
+                </li>
+            </ul>
         </section>
     </main>
     <footer>
