--- a/projets.html
+++ b/projets.html
@@ -5,17 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HAZ - Projets</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/font.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/font.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap">
+    <script src="./js/script.js" defer></script>
 </head>
 
 <body>
     <header>
         <div class="top-page">
-            <img src="../img/Logo HAZ.png" alt="Logo du site">
+            <img src="./img/Logo HAZ.png" alt="Logo du site">
             <nav class="navMenu">
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="projets.html">Projets</a></li>
@@ -30,19 +31,19 @@
                 <li>
                     <h3>Jeu Dice Dice Baby</h3>
                     <p>Animation du jeu de société Piña Coladice.</p>
-                    <p>Lien vers <a href="../../appli_pina_coladice/html/index.html">Dice Dice Baby</a></p>
+                    <p>Lien vers <a href="../appli_pina_coladice/html/index.html">Dice Dice Baby</a></p>
                 </li>
                 <hr>
                 <li>
                     <h3>Site de Brassage de Bière artisannale</h3>
                     <p>Site internet sur tout ce qu'il faut savoir pour créer sa propre bière maison, avec un répertoire de recette de bière.</p>
-                    <p>Lien vers <a href="../../site_brassage/html/index.html">Brassage de Bière</a></p>
+                    <p>Lien vers <a href="../site_brassage/html/index.html">Brassage de Bière</a></p>
                 </li>
                 <hr>
                 <li>
                     <h3>Quiz</h3>
                     <p>Projet éducatif. Ce projet a pour objectif de développer une application de quiz interactive en utilisant des technologies front-end telles que HTML, CSS et JavaScript.</p>
-                    <p>Lien vers <a href="">Quiz</a></p>
+                    <p>Lien vers <a href="https://hazbraaaa.github.io/Quiz_Game/">Quiz</a></p>
                 </li>
                 <hr>
                 <li>
@@ -92,7 +93,6 @@
     <footer>
         <p><a href="plan_du_site.html">Plan du site</a> - Tous droits réservés © 2025 HAZ</p>
     </footer>
-    <script src="../js/script.js" defer></script>
 </body>
 
 </html>
