update before sharing on LinkedIn

--- a/contact.html
+++ b/contact.html
@@ -27,8 +27,8 @@
     <main>
         <section>
             <h2>Contact</h2>
-            <p>Vous pouvez me contactez via <a href="https://www.linkedin.com/in/cl%C3%A9ment-hazera-659057129/">Mon Profil LinkedIn <img class="logos" src="../img/LinkedIn_logo_initials.webp" alt="Logo du LinkedIn">
-            </a><br><br>ou<br><br>En remplissant le formulaire suivant:</p>
+            <p>Vous pouvez me contactez via <a href="https://www.linkedin.com/in/clement-hazera-fullstackdev/">Mon Profil LinkedIn <img class="logos" src="./img/Linkedin.webp" alt="Logo LinkedIn">
+            </a><br><br>ou<br><br>En remplissant le formulaire suivant: (inactif)</p>
             <form class="form-container">
                 <label for="name">Nom :</label>
                 <input type="text" id="name" name="name" required>
