--- a/projets.html
+++ b/projets.html
@@ -31,15 +31,15 @@
                 <li>
                     <h3>Jeu Dice Dice Baby</h3>
                     <p>Animation du jeu de société Piña Coladice.</p>
-                    <p>Lien vers <a href="../appli_pina_coladice/html/index.html">Dice Dice Baby</a></p>
+                    <p>Lien vers <a href="">Dice Dice Baby</a> (inactif)</p>
                 </li>
                 <hr>
-                <li>
+                <!-- <li>
                     <h3>Site de Brassage de Bière artisannale</h3>
                     <p>Site internet sur tout ce qu'il faut savoir pour créer sa propre bière maison, avec un répertoire de recette de bière.</p>
                     <p>Lien vers <a href="../site_brassage/html/index.html">Brassage de Bière</a></p>
                 </li>
-                <hr>
+                <hr> -->
                 <li>
                     <h3>Quiz</h3>
                     <p>Projet éducatif. Ce projet a pour objectif de développer une application de quiz interactive en utilisant des technologies front-end telles que HTML, CSS et JavaScript.</p>
@@ -49,43 +49,43 @@
                 <li>
                     <h3>Dataviz & API</h3>
                     <p>Projet éducatif. Ce projet a pour objectif de développer une application web qui permette de visualiser des données de façon dynamique</p>
-                    <p>Lien vers <a href="">Projet</a></p>
+                    <p>Lien vers <a href="https://hazbraaaa.github.io/Dataviz_API_ISS/">Dataviz-API_ISS</a></p>
                 </li>
                 <hr>
                 <li>
                     <h3>Extension de navigateur</h3>
                     <p>Projet éducatif. Ce projet a pour objectif le développement d'une extension pour navigateur.</p>
-                    <p>Lien vers <a href="">Extension</a></p>
+                    <p>Lien vers <a href="">Extension</a> (inactif)</p>
                 </li>
                 <hr>
                 <li>
                     <h3>Réseau social PHP</h3>
                     <p>Projet éducatif. Ce projet a pour objectif le développement d'un réseau social en PHP.</p>
-                    <p>Lien vers <a href="">Réseau Social</a></p>
+                    <p>Lien vers <a href="">Réseau Social</a> (inactif)</p>
                 </li>
                 <hr>
                 <li>
                     <h3>Plateforme de vente de meubles</h3>
                     <p>Projet éducatif. Ce projet a pour objectif la création d'une plateforme de vente de meuble.</p>
-                    <p>Lien vers <a href="">Plateforme de vente</a></p>
+                    <p>Lien vers <a href="">Plateforme de vente</a> (inactif)</p>
                 </li>
                 <hr>
                 <li>
                     <h3>Plateforme microblogging</h3>
                     <p>Projet éducatif. Ce projet a pour objectif la création d'une plateforme de microblogging.Vous allez créer une application Android qui référence les meilleurs spots de surf du monde</p>
-                    <p>Lien vers <a href="">Plateforme microblogging</a></p>
+                    <p>Lien vers <a href="">Plateforme microblogging</a> (inactif)</p>
                 </li>
                 <hr>
                 <li>
                     <h3>Application Mobile Front</h3>
                     <p>Projet éducatif. Ce projet a pour objectif la création d'une application iPhone qui référence les meilleurs spots de surf du monde.</p>
-                    <p>Lien vers <a href="">Application Mobile Front</a></p>
+                    <p>Lien vers <a href="">Application Mobile Front</a> (inactif)</p>
                 </li>
                 <hr>
                 <li>
                     <h3>Application Mobile Back</h3>
                     <p>Projet éducatif. Ce projet a pour objectif la création d'une API REST en GO afin de dynamiser votre application iPhone qui référence les meilleurs spots de surf du monde.</p>
-                    <p>Lien vers <a href="">Application Mobile Back</a></p>
+                    <p>Lien vers <a href="">Application Mobile Back</a> (inactif)</p>
                 </li>
             </ul>
         </section>
