--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="./css/font.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap">
     <script src="./js/script.js" defer></script>
 </head>
 
@@ -26,22 +27,34 @@
     </header>
     <main>
         <section>
-            <h2>Bienvenue !</h2>
-            <p>Je m'appelle <strong>Clément HAZERA</strong>. Actuellement en reconversion pour devenir
-                <strong><em>Développeur Full Stack</em></strong>, je suis à la recherche d'une alternance en contrat de
-                professionnalisation.
+            <h2>Salut !</h2>
+            <p>Moi c'est <strong>Clément</strong>,</p>
+            <p>
+                Petit, je rêvais de construire ma propre maison. C'est ce qui m'a poussé à me former en Génie Civil,
+                avec une spécialisation dans les économies d'énergie du bâtiment, car préserver l'environnement a
+                toujours été important pour moi.
             </p>
-            <p>Venant du domaine des Economies d'Energies dans le Bâtiment, je souhaiterais acquérir les compétences qui
-                me permettront de créer les outils utiles à la transition écologique et numérique.</p>
+            <p>
+                Au fil de mes expériences en entreprise, j'ai souvent eu la sensation de ne pas avoir d'impact réel sur mon travail. J'ai utilisé de nombreux outils informatiques, mais je me heurtais sans cesse à leurs limites… jusqu'au jour où, dans mon dernier poste, j'ai voulu ajouter une fonctionnalité manquante à une application. <br>Et là, déclic : pourquoi ne pas créer moi-même ces outils ?
+            </p>
+            <p>
+                C'est ainsi que j'ai plongé dans le code. J'ai tenté la Piscine de l'École 42 à deux reprises (en posant quatre semaines de congés !), mais ça n'a pas marché. Pourtant, j'étais déjà accro, et revenir en arrière était impensable.
+            </p>
+            <p>
+                J'ai finalement trouvé la formation idéale à l'<strong><em>ADA TECH SCHOOL</em></strong>, où je me reconvertis aujourd'hui pour devenir <strong><em>Développeur Full Stack</em></strong>.
+            </p>
+            <p>
+                Je suis actuellement à la recherche d'une entreprise pour une alternance, avec l'envie de rejoindre une équipe aussi motivée que moi pour monter en compétences à vitesse grand V.
+            </p>
         </section>
         <section>
-            <h3>Les différents languages que je suis en train d'apprendre:</h3>
+            <h2>Ma Stack Tech:</h2>
             <ul>
                 <li>HTML / CSS</li>
                 <li>Javascript</li>
                 <li>C</li>
-                <li>PHP</li>
-                <li>SQL</li>
+                <li>PHP (en cours)</li>
+                <li>SQL (en cours)</li>
             </ul>
         </section>
     </main>
