fixing header background, and more

--- a/index.html
+++ b/index.html
@@ -14,10 +14,14 @@
         <div class="header container">
             <div class="nav-bar">
                 <div class="brand">
-                    <a href="#top-page"><div class="icon"><img src="./img/Logo HAZ.png" alt="LinkedIn-Icon"></div></a>
+                    <a href="#top-page">
+                        <div class="icon"><img src="./img/Logo HAZ.png" alt="LinkedIn-Icon"></div>
+                    </a>
                 </div>
                 <div class="nav-list">
-                    <div class="hamburger"><div class="bar"></div></div>
+                    <div class="hamburger">
+                        <div class="bar"></div>
+                    </div>
                     <ul>
                         <li><a href="#top-page" data-after="Accueil">Accueil</a></li>
                         <li><a href="#about" data-after="A propos">A propos</a></li>
@@ -41,7 +45,8 @@
         <div class="about container">
             <div class="about-top">
                 <h1 class="section-title"><span>A</span> propos</h1>
-                <p>Mon défi pour 2025 : trouver une équipe cool, engagée, où je pourrai coder, apprendre et contribuer à de
+                <p>Mon défi pour 2025 : trouver une équipe cool, engagée, où je pourrai coder, apprendre et contribuer à
+                    de
                     vrais projets. Si tu cherches quelqu'un de motivé, curieux et pas prise de tête, on se capte ?</p>
             </div>
             <div class="about-bottom">
@@ -84,23 +89,23 @@
                 <div class="project-item">
                     <div class="project-info">
                         <h1>Dice Dice Baby</h1>
-                        <h2>Jeu de dés</h2>
+                        <h2>Jeu de dés (En cours de réalisation)</h2>
                         <p>Reproduction du jeu de société Piña Coladice. Création de compte joueur. Possibilité de jouer
                             de 2 à 4 joueurs. Stockage des parties.</p>
                     </div>
                     <div class="project-img">
-                        <img src="./img/dice_dice_baby.png" alt="Projet Piña Coladice">
+                        <img src="./img/dice_dice_baby.png" alt="Projet Dice Dice Baby">
                     </div>
                 </div>
                 <div class="project-item">
                     <div class="project-info">
-                        <h1>Où est l'ISS ?</h1>
-                        <h2>ISS TRACKER</h2>
+                        <h1>ISS Tracker</h1>
+                        <h2>Où est l'ISS ?</h2>
                         <p>Application de visualisation de données dynamique grâce à une API. Affichage grâce à la
                             bibliothèque Globe.gl. Reverse geocoding pour affichage du pays survolé.</p>
                     </div>
                     <div class="project-img">
-                        <img src="./img/ISS_tracker.png" alt="Projet ISS TRACKER">
+                        <a href="https://hazbraaaa.github.io/Dataviz_API_ISS/"><img src="./img/ISS_tracker.png" alt="Projet ISS TRACKER"></a>
                     </div>
                 </div>
                 <div class="project-item">
@@ -111,31 +116,31 @@
                             Reprise du quiz à l'endroit où on s'arrête.</p>
                     </div>
                     <div class="project-img">
-                        <img src="./img/quiz_game.png" alt="Projet Piña Coladice">
+                        <a href="https://hazbraaaa.github.io/Quiz_Game/"><img src="./img/quiz_game.png" alt="Projet Quiz Game"></a>
                     </div>
                 </div>
                 <div class="project-item">
                     <div class="project-info">
                         <h1>Projet 4</h1>
-                        <h2>En cours de réalisation</h2>
+                        <h2>Futur projet</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, in dolores impedit qui
                             laborum hic vitae recusandae accusamus unde? Quidem fuga dicta maxime voluptatem aperiam
                             adipisci mollitia molestias nobis dolor.</p>
                     </div>
                     <div class="project-img">
-                        <img src="./img/about.png" alt="Projet Piña Coladice">
+                        <img src="./img/about.png" alt="Projet XXXXXXX">
                     </div>
                 </div>
                 <div class="project-item">
                     <div class="project-info">
                         <h1>Projet 5</h1>
-                        <h2>En cours de réalisation</h2>
+                        <h2>Futur projet</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, in dolores impedit qui
                             laborum hic vitae recusandae accusamus unde? Quidem fuga dicta maxime voluptatem aperiam
                             adipisci mollitia molestias nobis dolor.</p>
                     </div>
                     <div class="project-img">
-                        <img src="./img/about.png" alt="Projet Piña Coladice">
+                        <img src="./img/about.png" alt="Projet XXXXXXX">
                     </div>
                 </div>
             </div>
