--- a/index.html
+++ b/index.html
@@ -90,8 +90,7 @@
                     <div class="project-info">
                         <h1>Dice Dice Baby</h1>
                         <h2>Jeu de dés (En cours de réalisation)</h2>
-                        <p>Reproduction du jeu de société Piña Coladice. Création de compte joueur. Possibilité de jouer
-                            de 2 à 4 joueurs. Stockage des parties.</p>
+                        <p>Reproduction du jeu de société Piña Coladice. Création de compte joueur. Possibilité de jouer de 2 à 4 joueurs. Stockage des parties.</p>
                     </div>
                     <div class="project-img">
                         <img src="./img/dice_dice_baby.png" alt="Projet Dice Dice Baby">
@@ -101,22 +100,24 @@
                     <div class="project-info">
                         <h1>ISS Tracker</h1>
                         <h2>Où est l'ISS ?</h2>
-                        <p>Application de visualisation de données dynamique grâce à une API. Affichage grâce à la
-                            bibliothèque Globe.gl. Reverse geocoding pour affichage du pays survolé.</p>
+                        <p>Application de visualisation de données dynamique grâce à une API. Affichage grâce à la bibliothèque Globe.gl. Reverse geocoding pour affichage du pays survolé.</p>
+                        <p><a href="https://github.com/Hazbraaaa/Dataviz_API_ISS">Lien vers le GitHub</a></p>
                     </div>
                     <div class="project-img">
-                        <a href="https://hazbraaaa.github.io/Dataviz_API_ISS/"><img src="./img/ISS_tracker.png" alt="Projet ISS TRACKER"></a>
+                        <a href="https://hazbraaaa.github.io/Dataviz_API_ISS/"><img src="./img/ISS_tracker.png"
+                                alt="Projet ISS TRACKER"></a>
                     </div>
                 </div>
                 <div class="project-item">
                     <div class="project-info">
                         <h1>Quiz Game</h1>
                         <h2>Quiz sur le cinéma</h2>
-                        <p>Plusieurs quiz sur le cinéma (celui qui me fait rire). Stockage du score. Création de timer.
-                            Reprise du quiz à l'endroit où on s'arrête.</p>
+                        <p>Plusieurs quiz sur le cinéma (celui qui me fait rire). Stockage du score. Création de timer. Reprise du quiz à l'endroit où on s'arrête.</p>
+                        <p><a href="https://github.com/Hazbraaaa/Quiz_Game">Lien vers le GitHub</a></p>
                     </div>
                     <div class="project-img">
-                        <a href="https://hazbraaaa.github.io/Quiz_Game/"><img src="./img/quiz_game.png" alt="Projet Quiz Game"></a>
+                        <a href="https://hazbraaaa.github.io/Quiz_Game/"><img src="./img/quiz_game.png"
+                                alt="Projet Quiz Game"></a>
                     </div>
                 </div>
                 <div class="project-item">
@@ -153,8 +154,8 @@
             </div>
             <div class="all-contacts">
                 <div class="contact-item">
-                    <div class="icon"><img src="./img/linkedin.png" alt="LinkedIn-Icon"></div>
                     <a href="https://www.linkedin.com/in/clement-hazera-fullstackdev/">
+                        <div class="icon"><img src="./img/linkedin.png" alt="LinkedIn-Icon"></div>
                         <div class="contact-info">
                             <h1>LinkedIn</h1>
                             <h2>@LinkedIn</h2>
@@ -162,8 +163,8 @@
                     </a>
                 </div>
                 <div class="contact-item">
-                    <div class="icon"><img src="./img/github.png" alt="GitHub-Icon"></div>
                     <a href="https://github.com/Hazbraaaa">
+                        <div class="icon"><img src="./img/github.png" alt="GitHub-Icon"></div>
                         <div class="contact-info">
                             <h1>GitHub</h1>
                             <h2>@GitHub</h2>
@@ -171,11 +172,13 @@
                     </a>
                 </div>
                 <div class="contact-item">
-                    <div class="icon"><img src="./img/mail.png" alt="Mail-Icon"></div>
-                    <div class="contact-info">
-                        <h1>Mail</h1>
-                        <h2>test@test.fr</h2>
-                    </div>
+                    <a>
+                        <div class="icon"><img src="./img/mail.png" alt="Mail-Icon"></div>
+                        <div class="contact-info">
+                            <h1>Mail</h1>
+                            <h2>hazera.c@gmail.com</h2>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
