--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                     </a>
                 </div>
                 <div class="contact-item">
-                    <a>
+                    <a href="mailto:hazera.c@gmail.com">
                         <div class="icon"><img src="./img/mail.png" alt="Mail-Icon"></div>
                         <div class="contact-info">
                             <h1>Mail</h1>
