big mistake, links changed because of refacto in gitHub

--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
                         <h1>ISS Tracker</h1>
                         <h2>Où est l'ISS ?</h2>
                         <p>Application de visualisation de données dynamique grâce à une API. Affichage grâce à la bibliothèque Globe.gl. Reverse geocoding pour affichage du pays survolé.</p>
-                        <p><a href="https://github.com/Hazbraaaa/Dataviz_API_ISS">Lien vers le GitHub</a></p>
+                        <p><a href="https://github.com/Hazbraaaa/PROJET_COLLECTIF_Dataviz_API_ISS">Lien vers le GitHub</a></p>
                     </div>
                     <div class="project-img">
-                        <a href="https://hazbraaaa.github.io/Dataviz_API_ISS/"><img src="./img/ISS_tracker.png"
+                        <a href="https://hazbraaaa.github.io/PROJET_COLLECTIF_Dataviz_API_ISS/"><img src="./img/ISS_tracker.png"
                                 alt="Projet ISS TRACKER"></a>
                     </div>
                 </div>
@@ -113,23 +113,22 @@
                         <h1>Quiz Game</h1>
                         <h2>Quiz sur le cinéma</h2>
                         <p>Plusieurs quiz sur le cinéma (celui qui me fait rire). Stockage du score. Création de timer. Reprise du quiz à l'endroit où on s'arrête.</p>
-                        <p><a href="https://github.com/Hazbraaaa/Quiz_Game">Lien vers le GitHub</a></p>
+                        <p><a href="https://github.com/Hazbraaaa/PROJET_COLLECTIF_Quiz_Game">Lien vers le GitHub</a></p>
                     </div>
                     <div class="project-img">
-                        <a href="https://hazbraaaa.github.io/Quiz_Game/"><img src="./img/quiz_game.png"
+                        <a href="https://hazbraaaa.github.io/PROJET_COLLECTIF_Quiz_Game/"><img src="./img/quiz_game.png"
                                 alt="Projet Quiz Game"></a>
                     </div>
                 </div>
                 <div class="project-item">
                     <div class="project-info">
-                        <h1>Projet 4</h1>
-                        <h2>Futur projet</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, in dolores impedit qui
-                            laborum hic vitae recusandae accusamus unde? Quidem fuga dicta maxime voluptatem aperiam
-                            adipisci mollitia molestias nobis dolor.</p>
+                        <h1>S.A.K.</h1>
+                        <h2>Extension Chrome</h2>
+                        <p>Extension de navigateur permettant de mémoriser un site internet en mettant une description, pour y revenir plus tard grâce à un tableau de tâches.</p>
+                        <p><a href="https://github.com/Hazbraaaa/PROJET_COLLECTIF_Extension_Chrome">Lien vers le GitHub</a></p>
                     </div>
                     <div class="project-img">
-                        <img src="./img/about.png" alt="Projet XXXXXXX">
+                        <img src="./img/ext_chrome.png" alt="Projet S.A.K.">
                     </div>
                 </div>
                 <div class="project-item">
