modifying about section

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <div class="icon"><img src="./img/hiking.png" alt="Now-Icon"></div>
                     <h2>Now</h2>
                     <p>Après des années de recherches, j'ai enfin trouvé le truc qui me fait vibrer : le code.
-                        Aujourd'hui, je me forme comme Développeur Full Stack chez Ada Tech School. Entre projets en
+                        Aujourd'hui, je me forme comme Développeur Fullstack chez Ada Tech School. Entre projets en
                         groupe, apprentissage intensif et échanges avec des pros du métier, chaque semaine est une
                         parfaite combinaison de challenges et de découvertes.</p>
                 </div>
@@ -74,7 +74,7 @@
                 <div class="about-item">
                     <div class="icon"><img src="./img/brickwall.png" alt="Stack-Icon"></div>
                     <h2>Stack</h2>
-                    <p>• JavaScript, Node.js, HTML/CSS, C, SQL<br>• Et bientôt : PHP, Java, et bien d'autres langages et
+                    <p>• JavaScript, HTML/CSS, C, Python, SQL<br>• Et bientôt : PHP, Java, et bien d'autres langages et
                         frameworks à venir</p>
                 </div>
             </div>
