redefine Stack, adjust about item on mobile

--- a/index.html
+++ b/index.html
@@ -68,14 +68,13 @@
                 <div class="about-item">
                     <div class="icon"><img src="./img/tools.png" alt="Skills-Icon"></div>
                     <h2>Skills</h2>
-                    <p>• Clean Code & bonnes pratiques<br>• Git / GitHub<br>• VS Code<br>• Méthodes Agiles (Scrum,
-                        Kanban)<br>• Travail en équipe</p>
+                    <p>• Clean Code & bonnes pratiques<br>• Git / GitHub<br>• VS Code<br>• Postman<br>• Notion, Figma<br>• Méthodes Agiles (Scrum,
+                        Kanban)<br>• Tests unitaires<br>• Travail en équipe</p>
                 </div>
                 <div class="about-item">
                     <div class="icon"><img src="./img/brickwall.png" alt="Stack-Icon"></div>
                     <h2>Stack</h2>
-                    <p>• JavaScript, HTML/CSS, C, Python, SQL<br>• Et bientôt : PHP, Java, et bien d'autres langages et
-                        frameworks à venir</p>
+                    <p>• HTML5, CSS3, JavaScript (ES6+), TypeScript, Python, SQL (PostgreSQL)<br>• React.js, Django, Tailwind CSS<br>• Mais j'ai pu également voir du PHP, du Java, du C...</p>
                 </div>
             </div>
         </div>
@@ -90,7 +89,7 @@
                     <div class="project-info">
                         <h1>Dice Dice Baby</h1>
                         <h2>Jeu de dés (En cours de réalisation)</h2>
-                        <p>Reproduction du jeu de société Piña Coladice. Création de compte joueur. Possibilité de jouer de 2 à 4 joueurs. Stockage des parties.</p>
+                        <p>Développement d'une application web multijoueur (2–4 joueurs), avec gestion des comptes, logique de jeu tour par tour, scoring et historique des parties.</p>
                     </div>
                     <div class="project-img">
                         <img src="./img/dice_dice_baby.png" alt="Projet Dice Dice Baby">
