--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="about-item">
                     <div class="icon"><img src="./img/brickwall.png" alt="Stack-Icon"></div>
                     <h2>Stack</h2>
-                    <p>• HTML5, CSS3, JavaScript (ES6+), TypeScript, Python, SQL (PostgreSQL)<br>• React.js, Django, Tailwind CSS<br>• Mais j'ai pu également voir du PHP, du Java, du C...</p>
+                    <p>• HTML5, CSS3, JavaScript (ES6+), Python, Java, SQL (PostgreSQL)<br>• React.js, Django, Spring, Tailwind CSS<br>• Mais j'ai pu également voir du PHP, du C...</p>
                 </div>
             </div>
         </div>
